<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Graph.Fragments.DFSFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_alltheway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".00" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_alltheway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.00" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline_alltheway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".00" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".65" />

    <Button
        android:id="@+id/instructionsButtonDFS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_button"

        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline" />

    <ImageView
        android:id="@+id/imageViewDFS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline2" />

    <Button
        android:id="@+id/generateButtonDFS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/generate_button"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline3"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline4"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline" />

    <Spinner
        android:id="@+id/spinnerSelectDFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline3"
        app:layout_constraintLeft_toLeftOf="@id/right_guideline4"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline" />

    <Button
        android:id="@+id/startButtonDFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline4"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline2"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline3" />

    <Button
        android:id="@+id/stopButtonDFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline4"
        app:layout_constraintLeft_toLeftOf="@id/right_guideline2"
        app:layout_constraintRight_toRightOf="@id/right_guideline3"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline3" />

    <Button
        android:id="@+id/rewindButtonDFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewind_button"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline4"
        app:layout_constraintLeft_toLeftOf="@id/right_guideline3"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline3" />

    <ScrollView
        android:id="@+id/scrollProofDFS"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline2"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="@id/bottom_guideline2"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/bottom_guideline4">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/DepthFirstSearchDescription"
                android:textSize="17sp"

                app:layout_constraintBottom_toBottomOf="@id/bottom_guideline2"
                app:layout_constraintLeft_toLeftOf="@id/left_guideline"
                app:layout_constraintRight_toRightOf="@id/right_guideline"
                app:layout_constraintTop_toTopOf="@id/bottom_guideline4" />

            <Button
                android:id="@+id/proofButtonDFS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correctness_button" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>